search service/login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="condition">Condition</string>
     <string name="locations">location</string>
     <string name="Time">Time</string>
+    <string name="search_hint">Search Places</string>
+    <string name="search_settings">Search Places</string>
 </resources>
