--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="header_name">Dan Yang</string>
     <string name="search_hint">Search Places</string>
     <string name="search_settings">Search Places</string>
+    <string name="last_map_location_lat_key" translatable="false">LAST_MAP_LAT</string>
+    <string name="last_map_location_lng_key" translatable="false">LAST_MAP_LNG</string>
+    <string name="last_map_zoom_key" translatable="false">LAST_MAP_ZOOM</string>
+    <string name="current_location">Current location</string>
 </resources>
