--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="last_map_zoom_key" translatable="false">LAST_MAP_ZOOM</string>
     <string name="current_location">Current location</string>
     <string name="build_route">View recommended route</string>
+    <string name="view_detail">View Details</string>
 </resources>
