--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -30,4 +30,17 @@
     <string name="current_location">Current location</string>
     <string name="build_route">View recommended route</string>
     <string name="view_detail">View Details</string>
+
+    <!-- RecommendedRouteFragment -->
+    <string name="recommended_route_title">Recommended route</string>
+    <string name="building_route">Building route&#8230;</string>
+    <string name="unavailable_route">Unavailable route. Choose a different travel mode.</string>
+    <string name="walking_directions_button_label">Walking</string>
+    <string name="bike_directions_button_label">Biking</string>
+    <string name="transit_directions_button_label">Transit</string>
+    <string name="driving_directions_button_label">Driving</string>
+    <string name="travel_distance">Distance: %.2f km</string>
+    <string name="travel_time">Time: %s</string>
+    <string name="long_time_format" translatable="false">H\' h \'m\' m\'</string>
+    <string name="short_time_format" translatable="false">m\' m\'</string>
 </resources>
